# esp-vision

./: Cargo.toml  LICENSE  dprint.json
.cargo/: config.toml
src/: lib.rs  ov2640.rs
src/apriltag/: decode.rs  image.rs  pose.rs  quad.rs  threshold.rs  unionfind.rs
src/dsp/: README.md  alloc.rs  matrix.rs  mod.rs  storage.rs
src/dsp/image/: dspi_min_max_u8.rs  dspi_sum_u8.rs  mod.rs
src/dsp/matrix/: dspm_bidiag_f32.rs  dspm_mult_ex_f32.rs  dspm_mult_f32.rs  dspm_mult_s16.rs  mod.rs
src/dsp/vector/: dsps_add_f32.rs  dsps_dotprod_f32.rs  dsps_mul_f32.rs  dsps_sub_f32.rs  mod.rs
src/ov2640/: mod.rs  regs.rs
