[package]
name = "esp-vision"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "esp-vision"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable", "psram"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32s3", "log-04"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
embedded-hal-async = "1.0.0"
nalgebra = { version = "0.34.2", default-features = false, features = ["libm", "alloc"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
